PTC-4: Add Location Service
