# src/routes/main.routes.ts
@@ -45,6 +45,7 @@ class MainRouter {
     this.router.post('/encodeQrCode', Auth.authenticate('jwt', { session: false }), MainController.encodeQrCode);
     this.router.post('/decodeQrCode', Auth.authenticate('jwt', { session: false }), MainController.decodeQrCode);
     this.router.get('/location', Auth.authenticate('jwt', { session: false }), MainController.getLocation);
+    this.router.post('/location', Auth.authenticate('jwt', { session: false }), MainController.postLocation);
   }
 
   getRouter() {
